Material transparency problems in solid viewport #38766

Closed
opened 2014-02-23 01:03:06 +01:00 by Karja Krähwald · 16 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 2.69 release and hash:4789793

Short description of error
Not sure here - i think these are bugs, but please take a look.

Blender Render - Solid viewport shading:
Mesh objects with Properties>Object>Display>Transparency>on ignore the checkbox for transparency in the material settings.
Means that you can adjust the alpha without activating it, and unfortunately you cant disable it on the fly via checkbox to remain the current state.


Could be related:

If you switch from Blender Render to Cycles Solid viewport with changed material alpha, the material keeps transparent even if you click on "use nodes".
Seems not to be a big problem but as far as i know there is no additional setting in Cycles to control it so its kind of hidden function now.
Blender Renders Emit for example disappears after switching to Cycles.

Exact steps for others to reproduce the error

[Blender Render]

  1. Add Cube.
  2. Go to Properties>Object>Display and enable Transparency, so you can see it in Solid viewport.
  3. Give Cube a material.
  4. Go to Material>Transparency (off) and play with the alpha setting.
  • Problem: The checkbox is treated as always enabled.

[Cycles Render]

  • This alpha-setting is also taken to Cycles solid viewport even if you click use nodes for the material.
**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 2.69 release and hash:4789793 **Short description of error** Not sure here - i think these are bugs, but please take a look. Blender Render - Solid viewport shading: Mesh objects with Properties>Object>Display>Transparency>on ignore the checkbox for transparency in the material settings. Means that you can adjust the alpha without activating it, and unfortunately you cant disable it on the fly via checkbox to remain the current state. ------- Could be related: If you switch from Blender Render to Cycles Solid viewport with changed material alpha, the material keeps transparent even if you click on "use nodes". Seems not to be a big problem but as far as i know there is no additional setting in Cycles to control it so its kind of hidden function now. Blender Renders Emit for example disappears after switching to Cycles. **Exact steps for others to reproduce the error** [Blender Render] 1. Add Cube. 2. Go to Properties>Object>Display and enable Transparency, so you can see it in Solid viewport. 3. Give Cube a material. 4. Go to Material>Transparency (off) and play with the alpha setting. - Problem: The checkbox is treated as always enabled. [Cycles Render] - This alpha-setting is also taken to Cycles solid viewport even if you click use nodes for the material.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

This issue was referenced by blender/blender-addons-contrib@a3f4736a4d

This issue was referenced by blender/blender-addons-contrib@a3f4736a4d34d9a85ee32a43d2425c7b916a20ec

This issue was referenced by a3f4736a4d

This issue was referenced by a3f4736a4d34d9a85ee32a43d2425c7b916a20ec

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the report, fixed now by not using this alpha value for cycles.

Thanks for the report, fixed now by not using this alpha value for cycles.
Brecht Van Lommel was assigned by Sergey Sharybin 2014-02-24 15:36:40 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Issue with the BI seems rather simple to solve? Not sure how should this behave with Cycles tho..

Issue with the BI seems rather simple to solve? Not sure how should this behave with Cycles tho..

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a3f4736a4d.

Closed by commit a3f4736a4d.

@brecht, woops race condition :)

@brecht, woops race condition :)

This issue was referenced by blender/blender-addons-contrib@7ef1ed15f1

This issue was referenced by blender/blender-addons-contrib@7ef1ed15f10c46275486fce1bca0b0355848b32d

This issue was referenced by 7ef1ed15f1

This issue was referenced by 7ef1ed15f10c46275486fce1bca0b0355848b32d
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

Dang, I (ab)used this bug to [make objects transparent ]] in the viewport in Cycles, via the [ http:*pablovazquez.org/amaranth | Amaranth addon, is it possible now in Cycles to have semi-transparent objects in the viewport?

Example: the cornea in the eyes is solid, so you can't see the iris. In order to see the iris I would lower the transparency of the object in the viewport, because hiding it from the outliner would hide it from the rendered preview too (unless using "Only this renderlayer" button thing).

Dang, I (ab)used this bug to [make objects transparent ]] in the viewport in Cycles, via the [[ http:*pablovazquez.org/amaranth | Amaranth ](http:*pablovazquez.org/amaranth/img/thumbs/feat_view3d_materialalpha.png) addon, is it possible now in Cycles to have semi-transparent objects in the viewport? Example: the cornea in the eyes is solid, so you can't see the iris. In order to see the iris I would lower the transparency of the object in the viewport, because hiding it from the outliner would hide it from the rendered preview too (unless using "Only this renderlayer" button thing).

Ok, this works again now, see {88f1c283a773bb76334d2d6a849d4e45c5c95373}.

Ok, this works again now, see {88f1c283a773bb76334d2d6a849d4e45c5c95373}.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38766
No description provided.