Fix T38766: cycles viewport incorrectly taking blender internal alpha into account.