source/blender/gpu/intern/gpu_draw.c
@@ -1423,7 +1423,7 @@ void GPU_begin_object_materials(View3D *v3d, RegionView3D *rv3d, Scene *scene, O
 	 * and only transparent in the second 'alpha' pass.
 	 * - object transparency off: for glsl we draw both in a single pass, and
 	 * for solid we don't use transparency at all. */
-	GMS.use_alpha_pass = (do_alpha_after != NULL);
+	GMS.use_alpha_pass = (do_alpha_after != NULL) && !new_shading_nodes;
 	GMS.is_alpha_pass = (v3d->transp != FALSE);
 	if (GMS.use_alpha_pass)
 		*do_alpha_after = false;
